--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 }
 
 img{
-    width:400px;
-    position: relative;
+    width:433px;
+    
     
 }
 
@@ -34,10 +34,13 @@ a{
 .container{
     width: 1300px;
     display: flex;
+    align-items: center;
 }
 
 .col-4{
     flex-basis: calc(100% / 3);
+    position: relative;
+    margin-right: 20px;
     
 }
 
@@ -59,6 +62,43 @@ main{
 .container_bot{
     padding-top: 100px;
 }
+
+.discount{
+    position: absolute;
+    bottom: 120px;
+    background-color: red;
+    padding: 5px 10px;
+    color: white;
+    font-weight: 700;
+}
+
+.free{
+    position: absolute;
+    left: 60px;
+    bottom: 120px;
+    background-color: green;
+    color: white;
+    font-weight: 700;
+    padding: 5px 10px;
+}
+
+.heart{
+    position: absolute;
+    right: 0px;
+    top: 40px;
+    background-color: white;
+    font-size: 50px;
+    padding: 0px 10px;
+}
+
+.img-back{
+    position: absolute;
+    left: 0px;
+    opacity: 0;
+}
+
+
+.col-4 :hover 
 
 
 /* FOOTER */
