--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ a{
     justify-content: center;
     background-color: orange;
     padding: 10px 0px;
+    position: fixed;
+    width: 100%;
 }
 
 .logo{
@@ -33,6 +35,7 @@ a{
     width: 1300px;
     display: flex;
     align-items: center;
+    
 }
 
 .col-4{
@@ -68,7 +71,9 @@ main{
     flex-wrap: wrap;
 }
 
-
+.container_top{
+    margin-top: 100px;
+}
 
 .container_bot{
     padding-top: 100px;
