--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 img{
-    width:433px;
+    width:100%;
 }
 
 a{
@@ -23,11 +23,11 @@ a{
     padding: 10px 0px;
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 .logo{
-    width: 200px
-    ;
+    width: 200px;
 }
 
 
@@ -35,13 +35,16 @@ a{
     width: 1300px;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     
 }
 
 .col-4{
     flex-basis: calc(100% / 3);
     position: relative;
-    margin-right: 20px;
+    padding: 0px 10px;
+    margin-bottom: 50px;
+
     
 }
 
@@ -50,7 +53,7 @@ a{
 }
 
 .col-12{
-    flex-basis: calc(100%)
+    flex-basis: calc(100%);
 
 }
 
@@ -71,12 +74,8 @@ main{
     flex-wrap: wrap;
 }
 
-.container_top{
+.container-main{
     margin-top: 100px;
-}
-
-.container_bot{
-    padding-top: 100px;
 }
 
 .discount{
@@ -90,7 +89,7 @@ main{
 
 .free{
     position: absolute;
-    left: 60px;
+    left: 70px;
     bottom: 120px;
     background-color: green;
     color: white;
@@ -107,21 +106,28 @@ main{
     padding: 0px 10px;
 }
 
+.img-top {
+    /* display: block; */
+}
+
 .img-back{
     position: absolute;
     left: 0px;
     opacity: 0;
+    /* display: none; */
 }
 
 
 .col-4:hover .img-top{
     opacity: 0;
     position: absolute;
+    /* display: none; */
 }
 
 .col-4:hover .img-back{
     opacity: 1;
     position: static;
+    /* display: block; */
 }
 
 /* FOOTER */
