--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ main{
 
 .heart{
     position: absolute;
-    right: 0px;
+    right: 10px;
     top: 40px;
     background-color: white;
     font-size: 50px;
@@ -130,6 +130,20 @@ main{
     /* display: block; */
 }
 
+.outfit-name{
+    font-size: 20px;
+}
+
+.outfit-price{
+    color: red;
+    font-weight: 700;
+    display: inline;
+}
+
+.outfit-price_discount{
+    text-decoration:line-through;
+    display: inline;
+}
 /* FOOTER */
 
 footer{
